<resources>
    <string name="app_name">Beelangue</string>
    <string name="learn">Learn</string>
    <string name="explore">Explore</string>
<!--    login page-->
    <string name="loginmsg1">WELCOME BACK!</string>
    <string name="loginmsg2">Let\'s Log you in</string>
    <string name="loginBtn">Login</string>
    <string name="createAccountBtn">Create Account</string>
    <string name="resetPasswordBtn">Reset Password</string>
    <!--    input prompts-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="usernamePrompt">Enter your username here</string>
    <string name="passwordPrompt">Enter password</string>
    <string name="email">Email</string>
    <string name="emailPrompt">email@mail.com</string>
    <string name="loginInput">Email/Username</string>
    <string name="loginInputPrompt">Enter email or username here</string>
    <!--    verification prompts-->
    <string name="waiting">Waiting for email verification…</string>
    <string name="resend">Resend Verification Email</string>
    <string name="changeEmail">Change Email</string>
    <string name="GoToLogin">Go to Login</string>
    <!--    camera explore page-->
    <string name="cameraPrompt">Point your camera to an object \n It will show the word in chosen language</string>
    <string name="cameraButton">Capture Image</string>
    <!--    create account page-->
    <string name="signUp">Sign Up</string>
    <string name="createAccountmsg1">Welcome to Belangue</string>
    <string name="createAccountmsg2">Let\'s Sign you up</string>
    <!--    pick journey page-->
    <string name="pickTitle">Pick your journey</string>
    <string name="learnDesc">Pick a stack and learn using provided flashcards</string>
    <string name="exploreDesc">Use your camera to point and translate objects around you</string>
<!--    error messages -->
    <string name="password_error">Sorry, password error or invalid</string>
<!--    Main Page-->
    <string name="heading"> Pick A Language </string>
    <string name="japan"> Japanese </string>
    <string name="indo"> Indonesian </string>
</resources>