<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"

                app:srcCompat="@drawable/belangue_favicon_color" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/playfair"
                android:text="@string/createAccountmsg1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poller_one"
                android:text="@string/createAccountmsg2"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair"
                android:text="@string/username"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/playfair"
                android:hint="@string/usernamePrompt"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/playfair"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/playfair"
                android:hint="@string/emailPrompt"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/playfair"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/playfair"
                android:hint="@string/passwordPrompt"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="11dp"
                    android:fontFamily="@font/poller_one"
                    android:text="@string/signUp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/poller_one"
                    android:text="@string/loginBtn"
                    android:textColor="@color/secondary"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/secondary"
                    app:strokeWidth="2dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>