<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="LearnExploreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poller_one"
                android:text="@string/pickTitle"
                android:textAlignment="textStart"
                android:textColor="@color/secondary"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/book" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poller_one"
                android:text="@string/learn"
                android:textAlignment="center"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair"
                android:text="@string/learnDesc"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/exploreBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/cameralogo" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poller_one"
                android:text="@string/explore"
                android:textAlignment="center"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair"
                android:text="@string/exploreDesc"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>